--- a/index-START.html
+++ b/index-START.html
@@ -59,7 +59,11 @@
 
 <script>
   window.addEventListener ('keydown', function (e) {
-    console.log(e.keyCode);
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    if (!audio) return;
+    audio.currentTime = 0; //resets audio file
+    audio.play();
+    console.log(e.keyCode, audio);
     
   })
 </script>
